--- a/Reportes/nbproject/project.properties
+++ b/Reportes/nbproject/project.properties
@@ -34,6 +34,7 @@ file.reference.commons-collections-3.2.1.jar=C:\\ScadalabSolar\\lib\\commons-col
 file.reference.commons-digester-1.7.jar=C:\\ScadalabSolar\\lib\\commons-digester-1.7.jar
 file.reference.commons-javaflow-20060411.jar=C:\\ScadalabSolar\\lib\\commons-javaflow-20060411.jar
 file.reference.commons-logging-1.1.jar=C:\\ScadalabSolar\\lib\\commons-logging-1.1.jar
+file.reference.iText-2.1.7.jar=iText-2.1.7.jar
 file.reference.jasperreports-5.5.0.jar=C:\\ScadalabSolar\\lib\\jasperreports-5.5.0.jar
 file.reference.javax.servlet.jar=C:\\ScadalabSolar\\lib\\javax.servlet.jar
 file.reference.jcommon-1.0.15.jar=C:\\ScadalabSolar\\lib\\jcommon-1.0.15.jar
@@ -52,7 +53,8 @@ javac.classpath=\
     ${file.reference.javax.servlet.jar}:\
     ${file.reference.jcommon-1.0.15.jar}:\
     ${file.reference.jfreechart-1.0.12.jar}:\
-    ${file.reference.poi-3.6.jar}
+    ${file.reference.poi-3.6.jar}:\
+    ${file.reference.iText-2.1.7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
